--- a/apps/landing/src/app/landing/locales/ar.json
+++ b/apps/landing/src/app/landing/locales/ar.json
@@ -60,11 +60,12 @@
     "placeholder": "أدخل عنوان بريدك الإلكتروني",
     "button": "اشترك"
   },
-  "shopBrands": {
-    "title": "تسوق من متاجرك المفضلة وادفع في 24 شهراً",
-    "subtitle": "ابق على اطلاع بأحدث العروض والمتاجر الجديدة. تسوق بسهولة باستخدام خطط الدفع المرنة من دفتر باي.",
-    "button": "تصفح العلامات التجارية"
-  },
+        "shopStores": {
+          "headline": "هذه المتاجر تستخدم دفتر باي بالفعل",
+          "subtitle": "اكتشف المتاجر الرائدة التي تثق في دفتر باي لتمكين عملائها من الدفع المرن",
+          "button": "تصفح جميع المتاجر",
+          "partnerBadge": "متاجر شريكة"
+        },
   "shop": {
     "hero": {
       "title": "اعثر على متجر. ادفع في 4.",
